--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         <li><a href="">Contact</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"><img src="images/cart.jpg" width="25px" height="25px"></a>
-                <img src="images/menu.jpg" class="menu-icon" onclick="menutoggle()">
+                <a href="cart.html"><img src="Freelanceku.github.io/images/cart.jpg" width="25px" height="25px"></a>
+                <img src="Freelanceku.github.io/images/menu.jpg" class="menu-icon" onclick="menutoggle()">
             </div>
             <div class="row">
                 <div class="col-2">
