Added new Files

--- a/cart.html
+++ b/cart.html
@@ -17,12 +17,12 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.jpg" width="200px"></a>
+                <a href="index.html"><img src="MicrosoftTeams-image__1_-removebg-preview.png" width="120px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
+                    <li><a href="products.html">Freelancers</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
@@ -38,54 +38,54 @@
     
     <table>
         <tr>
-            <th>Products</th>
+            <th>Commision</th>
             <th>Quantity</th>
             <th>Subtotal</th>
         </tr>
         <tr>
             <td>
                 <div class="cart-info">
-                    <a href="product-details.html"><img src="images/products-1.jpg" width="150px" height="75px"></a>
+                    <a href="product-details.html"><img src="images/Null pp.jpg" width="150px" height="75px"></a>
                     <div>
-                        <p>Dell XPS 13 9310</p>
-                        <small>Price: Rp.22,399,000</small>
+                        <p>Freelancer 1</p>
+                        <small>Price: Rp.100,000</small>
                         <br>
                         <a href="">Remove</a>
                     </div>
                 </div>
             </td>
             <td><input type="number" value="1"></td>
-            <td>Rp.22,399,000</td>
+            <td>Rp.100,000</td>
         </tr>
         <tr>
             <td>
                 <div class="cart-info">
-                    <a href="product-details.html"><img src="images/products-1.jpg" width="150px" height="75px"></a>
+                    <a href="product-details.html"><img src="images/Null pp.jpg" width="150px" height="75px"></a>
                     <div>
-                        <p>Dell XPS 13 9310</p>
-                        <small>Price: Rp.22,399,000</small>
+                        <p>Freelancer 2</p>
+                        <small>Price: Rp.150,000</small>
                         <br>
                         <a href="">Remove</a>
                     </div>
                 </div>
             </td>
             <td><input type="number" value="1"></td>
-            <td>Rp.22,399,000</td>
+            <td>Rp.150,000</td>
         </tr>
         <tr>
             <td>
                 <div class="cart-info">
-                    <a href="product-details.html"><img src="images/products-1.jpg" width="150px" height="75px"></a>
+                    <a href="product-details.html"><img src="images/Null pp.jpg" width="150px" height="75px"></a>
                     <div>
-                        <p>Dell XPS 13 9310</p>
-                        <small>Price: Rp.22,399,000</small>
+                        <p>Freelancer 3</p>
+                        <small>Price: Rp.199,000</small>
                         <br>
                         <a href="">Remove</a>
                     </div>
                 </div>
             </td>
             <td><input type="number" value="1"></td>
-            <td>Rp.22,399,000</td>
+            <td>Rp.199,000</td>
         </tr>
     </table>
 
@@ -94,15 +94,15 @@
         <table>
             <tr>
                 <td>Subtotal</td>
-                <td>Rp.45,399,000</td>
+                <td>Rp.449,000</td>
             </tr>
             <tr>
                 <td>Tax</td>
-                <td>Rp.400,000</td>
+                <td>Rp.44,900</td>
             </tr>
             <tr>
                 <td>Subtotal</td>
-                <td>Rp.45,799,000</td>
+                <td>Rp.493,900</td>
             </tr>
         </table>
 
@@ -116,7 +116,7 @@
     <div class="container">
         <div class="row">
             <div class="footer-col-1">
-                <img src="images/logo1.jpg" width="375px" height="100px">
+                <img src="Logo Light version.png" width="300px" height="300px" justify-content: flex-start>
                 <p>Always Delivers</p>
             </div>
             <div class="footer-col-4">
