--- a/index.html
+++ b/index.html
@@ -27,28 +27,51 @@
                 <nav>
                     <ul id="MenuItems">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="products.html">Products</a></li>
+                        <li><a href="products.html">Freelancers</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"><img src="Freelanceku.github.io/images/cart.jpg" width="25px" height="25px"></a>
+                <a href="cart.html"><img src="images/cart.jpg" width="25px" height="25px"></a>
                 <img src="Freelanceku.github.io/images/menu.jpg" class="menu-icon" onclick="menutoggle()">
             </div>
             <div class="row">
                 <div class="col-2">
                     <h1>Everything starts<br>from here!</h1>
 
+                    <!-- <div class="header">
+        <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <a href="index.html"><img src="images/MicrosoftTeams-image__1_-removebg-preview.png"
+                            width="120px"></a>
+                </div>
+                <nav>
+                    <ul id="MenuItems">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
+                <a href="cart.html"><img src="images/cart.jpg" width="25px" height="25px"></a>
+                <img src="images/menu.jpg" class="menu-icon" onclick="menutoggle()">
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    <h1>Everything starts<br>from here!</h1> -->
+
+
 
                     <div class="topnav">
                         <input type="text" placeholder='Try  "Finding a good cleaning service for 3 days"'>
                     </div>
-                    <p>Success always has a beginning. Shop the latest gadgets <br>for your success with the best deals.
+                    <p>Success always has a beginning. Start Your Freelance work <br>for your success with the best services!.
                     </p>
                     <a href=" products.html" class="btn">Explore Now </a>
                 </div>
                 <div class="col-2">
-                    <img src="images/image1.jpg">
+                    <img src="images/Header Freelancer logo.png">
                 </div>
             </div>
         </div>
@@ -60,25 +83,27 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-3">
-                    <img src="Images/category1.jpg" width="500px" height="205px">
+                    <img src="Images/Freelancers.jpg" width="500px" height="205px">
                 </div>
                 <div class="col-3">
-                    <img src="Images/category2.jpg">
+                    <img src="Images/Freelancer 2.jpg" width="500px" height="205px">
                 </div>
                 <div class="col-3">
-                    <img src="Images/category3.jpg">
+                    <img src="Images/Freelancers 3.jpg" width="500px" height="205px">
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- C:\Users\Arthur\Downloads\Website host freelanceku\Freelanceku.github.io\Arthur.HTML
+    C:\Users\Arthur\Downloads\Website host freelanceku\Freelanceku.github.io\product-details.html
+     -->
     <!---------- featured products ------------>
     <div class="small-container">
-        <h2 class="title">Featured Products</h2>
+        <h2 class="title">Featured freelancers</h2>
         <div class="row">
             <div class="col-4">
-                <a href="product-details.html"><img src="Images/products-1.jpg" width="1500px" height="150px"></a>
-                <h4>Dell XPS 13 9310</h4>
+                <a href="Hayden.html"><img src="Images/Hayden.png" width="1500px" height="150px"></a>
+                <h4>Hayden Simaguen</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -86,11 +111,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-half"></i>
                 </div>
-                <p>Rp.22,399,000</p>
+                <p>Rp.100,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-2.jpg" width="1500px" height="150px">
-                <h4>Logitech MX Keys Keyboard</h4>
+                <a href="Arthur.HTML"><img src="Images/Arthur.png" width="1500px" height="150px"></a>
+                <h4>Benediktus Arthur Suparto</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -98,11 +123,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-half"></i>
                 </div>
-                <p>Rp.1,655,000</p>
+                <p>Rp.450,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-3.jpg" width="1500px" height="150px">
-                <h4>Glorious Model O Wireless</h4>
+                <img src="Images/Brian.png" width="1500px" height="150px">
+                <h4>Brian Dharmawan Laimena</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -113,8 +138,8 @@
                 <p>Rp.1,199,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-4.jpg" width="1500px" height="150px">
-                <h4>Asus ROG Rapture<br>GT-AX11000 Router</h4>
+                <img src="Images/Andrew.png" width="1500px" height="150px">
+                <h4>Andrew Tan</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -128,11 +153,11 @@
 
         <!---------- Best Selling Products ------------>
 
-        <h2 class="title">Best Selling Products</h2>
+        <h2 class="title">Other Freelancers</h2>
         <div class="row">
             <div class="col-4">
-                <img src="Images/products-9.jpg" width="100px" height="150px">
-                <h4>Acer Aspire A514-54</h4>
+                <img src="Images/Null pp.jpg" width="100px" height="150px">
+                <h4>Freelancer 1</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -143,8 +168,8 @@
                 <p>Rp.6,599,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-10.jpg" width="1500px" height="150px">
-                <h4>Epson L120 Printer</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 2</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -155,8 +180,8 @@
                 <p>Rp.1,499,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-11.jpeg" width="1500px" height="150px">
-                <h4>10M RJ45 Lan Cable</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 3</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -167,8 +192,8 @@
                 <p>Rp.49,999</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-12.webp" width="1500px" height="150px">
-                <h4>Logitech MX 120 Keyboard Mouse Bundle</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 4</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -181,8 +206,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="Images/products-13.webp" width="1500px" height="150px">
-                <h4>Simbadda CST 3000N Speaker</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 5</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -193,8 +218,8 @@
                 <p>Rp.319,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-14.jpg" width="1500px" height="125px">
-                <h4>HKVision 5MP 2CE76H0T-ITPF</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="125px">
+                <h4>Freelancer 6</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -205,8 +230,8 @@
                 <p>Rp.399,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-15.jpg" width="1500px" height="150px">
-                <h4>ROG Zephyrus G14 GA401QH</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 7</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -217,8 +242,8 @@
                 <p>Rp.16,499,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-16.jpeg" width="1500px" height="150px">
-                <h4>TP-Link TL-WR840N Router</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 8</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -236,20 +261,15 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-2">
-                    <img src="images/discount.jpg" class="offer-img">
+                    <img src="images/Arthur 2.png" class="offer-img">
                 </div>
                 <div class="col-2">
-                    <p>Exclusive Deals only on Genesis Computer</p>
-                    <h1>Asus Vivobook 14 A416EPO</h1>
-                    <small>Asus Vivobook 14 ASUS VivoBook 14 is the laptop that immerses you in whatever you set out
-                        to
-                        do.
-                        Its new frameless four-sided NanoEdge display boasts an ultraslim 5.7mm bezel, giving
-                        an amazing 87% screen-to-body ratio for supremely immersive visuals. Extremely lightweight
-                        and
-                        compact,
-                        VivoBook 14 weighs just 1.4kg and has a 17.7mm profile.<br>Buy now at a discounted price of
-                        Rp.9,050,000.<br></small>
+                    <p>Exclusive Freelancers Only on Freelanceku</p>
+                    <h1>Arthur Suparto</h1>
+                    <small>Arthur Suparto is a well experienced Developer in the Web Development Industry
+                        Having 10 Years of Experience making websites for multiple people and helped
+                        some start up tech companies with there website designs, Freelanceku officially introduce Arthur Suparto as an 
+                        exclusive Freelancer
                     <a href="" class="btn">Buy Now &#8594;</a>
                 </div>
             </div>
@@ -263,8 +283,9 @@
             <div class="row">
                 <div class="col-3">
                     <i class="bi bi-quote"></i>
-                    <p>Got a good price on a laptop but had some issues, they did solve it. So it was good of them.
-                        Would recommend calling them with any issues so they solve right away.</p>
+                    <p>Got a good website design from one of the web developers in Freelanceku,
+                        now my company has a good website
+                    </p>
                     <div class="rating">
                         <i class="bi bi-circle-fill"></i>
                         <i class="bi bi-circle-fill"></i>
@@ -277,9 +298,7 @@
                 </div>
                 <div class="col-3">
                     <i class="bi bi-quote"></i>
-                    <p>It's Amazon for just tech. Also frequently has deals. I go here to pc parts or extra
-                        peripheral
-                        items for my desktop.
+                    <p>It's Fiverr but Indonesia, Has frequent new Freelancers and new types of freelance everyday
                     </p>
                     <div class="rating">
                         <i class="bi bi-circle-fill"></i>
@@ -293,9 +312,8 @@
                 </div>
                 <div class="col-3">
                     <i class="bi bi-quote"></i>
-                    <p>I ordered a laptop from Genesis because they offered the best price. Nevertheless, I had to
-                        wait
-                        a week more than expected. I was afraid that the package is lost but it arrived eventually.
+                    <p>I paid for a voice acting commision and was surprised at how professional and fast the 
+                        freelancers work in Freelanceku
                     </p>
                     <div class="rating">
                         <i class="bi bi-circle-fill"></i>
