--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
+                    <li><a href="products.html">Freelancers</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
@@ -41,21 +41,21 @@
     <div class="small-container">
 
         <div class="row row-2">
-            <h2>All Products</h2>
+            <h2>All Freelancers</h2>
             <select>
-                <option>Default Shorting</option>
-                <option>Short by Price</option>
-                <option>Short by Popularity</option>
-                <option>Short by Rating</option>
-                <option>Short by sale</option>
+                <option>Default Sorting</option>
+                <option>Sort by Price</option>
+                <option>Sort by Popularity</option>
+                <option>Sort by Rating</option>
+                <option>Sort by sale</option>
             </select>
 
         </div>
 
         <div class="row">
             <div class="col-4">
-                <a href="product-details.html"><img src="Images/products-1.jpg" width="1500px" height="150px"></a>
-                <h4>Dell XPS 13 9310</h4>
+                <a href="product-details.html"><img src="Images/Null pp.jpg" width="1500px" height="150px"></a>
+                <h4>Freelancer 1</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -63,11 +63,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-half"></i>
                 </div>
-                <p>Rp.22,399,000</p>
+                <p>Rp.100,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-2.jpg" width="1500px" height="150px">
-                <h4>Logitech MX Keys Keyboard</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 2</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -75,11 +75,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-half"></i>
                 </div>
-                <p>Rp.1,655,000</p>
+                <p>Rp.150,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-3.jpg" width="1500px" height="150px">
-                <h4>Glorious Model O Wireless</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 3</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -87,11 +87,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-half"></i>
                 </div>
-                <p>Rp.1,199,000</p>
+                <p>Rp.199,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-4.jpg" width="1500px" height="150px">
-                <h4>Asus ROG Rapture<br>GT-AX11000 Router</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 4</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -99,13 +99,13 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-half"></i>
                 </div>
-                <p>Rp.5,099,000</p>
+                <p>Rp.170,000</p>
             </div>
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="Images/products-9.jpg" width="100px" height="150px">
-                <h4>Acer Aspire A514-54</h4>
+                <img src="Images/Null pp.jpg" width="100px" height="150px">
+                <h4>Freelancer 5</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -113,11 +113,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
                 </div>
-                <p>Rp.6,599,000</p>
+                <p>Rp.300,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-10.jpg" width="1500px" height="150px">
-                <h4>Epson L120 Printer</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 6</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -125,11 +125,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-half"></i>
                 </div>
-                <p>Rp.1,499,000</p>
+                <p>Rp.500,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-11.jpeg" width="1500px" height="150px">
-                <h4>10M RJ45 Lan Cable</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 7</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -137,11 +137,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle"></i>
                 </div>
-                <p>Rp.49,999</p>
+                <p>Rp.375,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-12.webp" width="1500px" height="150px">
-                <h4>Logitech MX 120 Keyboard Mouse Bundle</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 8</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -154,8 +154,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="Images/products-13.webp" width="1500px" height="150px">
-                <h4>Simbadda CST 3000N Speaker</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 9</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -166,8 +166,8 @@
                 <p>Rp.319,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-14.jpg" width="1500px" height="125px">
-                <h4>HKVision 5MP 2CE76H0T-ITPF</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="125px">
+                <h4>Freelancer 10</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -178,8 +178,8 @@
                 <p>Rp.399,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-15.jpg" width="1500px" height="150px">
-                <h4>ROG Zephyrus G14 GA401QH</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 11</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -187,11 +187,11 @@
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-half"></i>
                 </div>
-                <p>Rp.16,499,000</p>
+                <p>Rp.160,000</p>
             </div>
             <div class="col-4">
-                <img src="Images/products-16.jpeg" width="1500px" height="150px">
-                <h4>TP-Link TL-WR840N Router</h4>
+                <img src="Images/Null pp.jpg" width="1500px" height="150px">
+                <h4>Freelancer 12</h4>
                 <div class="rating">
                     <i class="bi bi-circle-fill"></i>
                     <i class="bi bi-circle-fill"></i>
@@ -218,7 +218,7 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col-1">
-                    <img src="images/logo1.jpg" width="375px" height="100px">
+                    <img src="Logo Light version.png" width="300px" height="300px" justify-content: flex-start>
                     <p>Always Deliver</p>
                 </div>
                 <div class="footer-col-4">
